deploy/05-deployment-cron.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpipam-cron
  annotations:
    argocd.argoproj.io/sync-wave: "5"
  labels:
    app: phpipam
    service: phpipam-cron
    component: phpipam-cron
    id: phpipam-cron
spec:
  selector:
    matchLabels:
      app: phpipam
      service: phpipam-cron
      component: phpipam-cron
      id: phpipam-cron
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: phpipam
        service: phpipam-cron
        component: phpipam-cron
        id: phpipam-cron
    spec:
      containers:
        - name: phpipam-cron
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          image: docker.io/phpipam/phpipam-cron:latest
          volumeMounts:
            - name: phpipam-ca-certs
              mountPath: /usr/local/share/ca-certificates
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      volumes:
        - name: phpipam-ca-certs
          configMap:
            name: phpipam-ca-certs
