deploy/05-deployment-web.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpipam-web
  annotations:
    argocd.argoproj.io/sync-wave: "5"
  labels:
    app: phpipam
    service: phpipam-web
    component: phpipam-web
    id: phpipam-web
spec:
  selector:
    matchLabels:
      app: phpipam
      service: phpipam-web
      component: phpipam-web
      id: phpipam-web
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: phpipam
        service: phpipam-web
        component: phpipam-web
        id: phpipam-web
    spec:
      containers:
        - name: phpipam-web
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          image: docker.io/phpipam/phpipam-www:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: phpipam-ca-certs
              mountPath: /usr/local/share/ca-certificates
      volumes:
        - name: phpipam-ca-certs
          configMap:
            name: phpipam-ca-certs
