deploy/04-service-mariadb.yml
---
apiVersion: v1
kind: Service
metadata:
  name: phpipam-mariadb
  annotations:
    argocd.argoproj.io/sync-wave: "4"
  labels:
    app: phpipam
    service: phpipam-mariadb
    component: phpipam-mariadb
    id: phpipam-mariadb
spec:
  selector:
    service: phpipam-mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
